--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,8 +19,10 @@
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tooltip": "^4.5.1",
     "redux": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
