README updated & gh-pages command updated to deploy the site in vite-app

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run vite build",
-    "deploy": "gh-pages -d vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
