--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.4",
     "react-icons": "^5.4.0",
-    "react-slick": "^0.30.3",
-    "react-tooltip": "^5.28.0",
-    "slick-carousel": "^1.8.1"
+    "react-multi-carousel": "^2.8.5",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
